fixed intersectionobserver to work on mobile

--- a/resources/assets/styles/components/home/_presentation.scss
+++ b/resources/assets/styles/components/home/_presentation.scss
@@ -74,16 +74,16 @@
         animation: fadein 0.4s forwards;
       }
       div:nth-of-type(1) {
-        animation-delay: 1s;
+        animation-delay: 0.3s;
       }
       div:nth-of-type(2) {
-        animation-delay: 1.2s;
+        animation-delay: 0.5s;
       }
       div:nth-of-type(3) {
-        animation-delay: 1.4s;
+        animation-delay: 0.7s;
       }
       div:nth-of-type(4) {
-        animation-delay: 1.6s;
+        animation-delay: 0.9s;
       }
       @include bp(small) {
         height: 50px;
